# bones

./: Cargo.toml  index.html  index.js
src/: aspirational_main.rs  calcada.rs  compiler.rs  constraint.rs  dispatch.rs  emulator.rs  io_buffer.rs  lib.rs  main.rs  mosaic.rs  renderer.rs  tiling.rs  view_port.rs  wmach.rs  wmach_stream.rs
src/crt/: Environment.h  IoBuffer.c  Main.c  Makefile  Memory.c  Memory.h  Program.h  ProgramCtx.c  ProgramCtx.h  Util.c  Util.h
