[package]
name = "bones"
version = "0.1.0"
authors = ["jsc <jsc+bones@demigods.org>"]
edition = "2018"
# one day!
#edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
nom = "5"
getopts = "0.2"
wasm-bindgen = "0.2"
gloo = "0.3"

[dependencies.web-sys]
version = "0.3.55"
features = [ "CanvasRenderingContext2d"
           , "console"
           , "Document"
           , "Element"
           , "WheelEvent"
           , "PointerEvent"
           , "HtmlCanvasElement"
           , "HtmlImageElement"
           , "Node"
           , "Path2d"
           , "Window"
           ]

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so it's only enabled
# in debug mode.
[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.6"
