[package]
name = "bones"
version = "0.1.0"
authors = ["jsc <jsc+bones@demigods.org>"]
edition = "2021"

[profile.release]
lto = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
nom = "5"
getopts = "0.2"
wasm-bindgen = "0.2"
gloo = "0.3"
url = "2.2"
# NOTE remove if we're not debugging
console_error_panic_hook = "0.1.6"

[dependencies.web-sys]
version = "0.3.55"
features = [ "CanvasRenderingContext2d"
           , "Element"
           , "HtmlInputElement"
           , "HtmlCanvasElement"
           , "Location"

           , "NamedNodeMap"
           , "Attr"

           , "PointerEvent"
           , "TouchEvent"
           , "TouchList"
           , "Touch"
           , "WheelEvent"
           ]
